<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.lmu.ifi.dbs.medmon.life</groupId>
    <artifactId>MedmonLife</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>de.lmu.ifi.dbs.medmon.life.core</module>
        <module>de.lmu.ifi.dbs.medmon.life.core.feature</module>
        <module>de.lmu.ifi.dbs.medmon.life.db</module>
        <module>de.lmu.ifi.dbs.medmon.life.e4</module>
        <module>de.lmu.ifi.dbs.medmon.life.ui.feature</module>
        <module>de.lmu.ifi.dbs.medmon.life.updatesite</module>
    </modules>
    <properties>
        <tycho.version>0.16.0</tycho.version>
        <maven.compiler.source>1.7</maven.compiler.source>
        <maven.compiler.target>1.7</maven.compiler.target>
        <encoding>UTF-8</encoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-maven-plugin</artifactId>
                <version>${tycho.version}</version>
                <extensions>true</extensions>
            </plugin>

            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-surefire-plugin</artifactId>
                <version>${tycho.version}</version>
                <configuration>
                    <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=256M</argLine>
                    <includes>
                        <include>**/*Test.*</include>
                    </includes>
                    <dependencies>
                        <dependency>
                            <type>p2-installable-unit</type>
                            <artifactId>org.eclipse.equinox.ds</artifactId>
                        </dependency>
                    </dependencies>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <!-- Eclipse repositories -->
        <repository>
            <id>eclipse-juno</id>
            <layout>p2</layout>
            <url>http://download.eclipse.org/releases/juno</url>
        </repository>
        <repository>
            <id>eclipse-sapphire</id>
            <layout>p2</layout>
            <url>http://download.eclipse.org/sapphire/0.5.2/repository</url>
        </repository>
        <repository>
            <id>eclipse-scala-ide</id>
            <layout>p2</layout>
            <url>http://download.scala-ide.org/releases-29/milestone/site</url>
        </repository>
        <repository>
            <id>eclipse-gemini-dbaccess</id>
            <layout>p2</layout>
            <url>http://download.eclipse.org/gemini/dbaccess/updates/1.0</url>
        </repository>
        <repository>
            <id>eclipse-nebula</id>
            <layout>p2</layout>
            <url>http://download.eclipse.org/technology/nebula/snapshot</url>
        </repository>
        <repository>
            <id>eclipse-nebula-incubation</id>
            <layout>p2</layout>
            <url>http://download.eclipse.org/technology/nebula/incubation/snapshot</url>
        </repository>
        <repository>
            <id>logback</id>
            <layout>p2</layout>
            <url>http://logback.qos.ch/p2</url>
        </repository>

        <!-- Custom repositories -->
        <repository>
            <id>google-guava</id>
            <layout>p2</layout>
            <url>http://guava-osgi.googlecode.com/svn/trunk/repository/</url>
        </repository>
        <repository>
            <id>medmon-repository</id>
            <layout>p2</layout>
            <url>http://repository.mukis.de/p2/medmon/snapshot</url>
        </repository>
        <repository>
            <id>knowing-repository</id>
            <layout>p2</layout>
            <url>http://repository.mukis.de/p2/knowing/snapshot</url>
        </repository>
        <repository>
            <id>jama-repository</id>
            <layout>p2</layout>
            <url>http://repository.mukis.de/p2/jama/1.0.2</url>
        </repository>
        <repository>
            <id>joda-repository</id>
            <layout>p2</layout>
            <url>http://repository.mukis.de/p2/joda</url>
        </repository>
        <repository>
            <id>jfreechart</id>
            <layout>p2</layout>
            <url>http://repository.mukis.de/p2/jfreechart</url>
        </repository>
        <repository>
            <id>weka</id>
            <layout>p2</layout>
            <url>http://repository.mukis.de/p2/weka/3.7.6</url>
        </repository>
    </repositories>
</project>
